--- a/W01D3/W01D1_APIs.ipynb
+++ b/W01D3/W01D1_APIs.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "## Lighthouse Labs\n",
-    "### W01D3 Deployment of ML Models\n",
+    "### W01D3 APIs\n",
     "Instructor: Socorro Dominguez  \n",
     "January 06, 2021"
    ]
@@ -123,7 +123,8 @@
     "**P**rogramming  \n",
     "**I**nterface  \n",
     "  \n",
-    "* We will be mostly using RESTful APIs. \n",
+    "* We will be mostly using RESTful APIs.   \n",
+    "\n",
     "**RE**presentation  \n",
     "**S**tate  \n",
     "**T**ransfer  \n",
@@ -220,7 +221,7 @@
    },
    "source": [
     "### Intro to XML   \n",
-    "• hierarchical description of tagged data  - This is how you would usually see data if you clic inspect to do Web Scraping\n",
+    "• hierarchical description of tagged data  \n",
     "\n",
     "```\n",
     "<library>\n",
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -335,67 +336,67 @@
        "  'RouteMap': {'Href': 'https://nb.translink.ca/geodata/099.kmz'},\n",
        "  'Schedules': [{'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '7:18pm 2021-01-05',\n",
-       "    'ExpectedCountdown': -4,\n",
-       "    'ScheduleStatus': '*',\n",
-       "    'CancelledTrip': False,\n",
-       "    'CancelledStop': False,\n",
-       "    'AddedTrip': False,\n",
-       "    'AddedStop': False,\n",
-       "    'LastUpdate': '08:08:02 pm'},\n",
-       "   {'Pattern': 'E1',\n",
-       "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '7:23pm 2021-01-05',\n",
+       "    'ExpectedLeaveTime': '6:49am',\n",
        "    'ExpectedCountdown': 1,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '08:08:02 pm'},\n",
+       "    'LastUpdate': '07:08:03 am'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '7:28pm 2021-01-05',\n",
+       "    'ExpectedLeaveTime': '6:54am',\n",
        "    'ExpectedCountdown': 6,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '08:08:02 pm'},\n",
+       "    'LastUpdate': '07:08:03 am'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '7:33pm 2021-01-05',\n",
-       "    'ExpectedCountdown': 11,\n",
+       "    'ExpectedLeaveTime': '6:57am',\n",
+       "    'ExpectedCountdown': 9,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '08:08:02 pm'},\n",
+       "    'LastUpdate': '07:08:03 am'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '7:38pm 2021-01-05',\n",
-       "    'ExpectedCountdown': 16,\n",
+       "    'ExpectedLeaveTime': '7:03am',\n",
+       "    'ExpectedCountdown': 15,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '08:08:02 pm'},\n",
-       "   {'Pattern': 'E8FL2',\n",
-       "    'Destination': 'TO BOUNDARY B-LINE',\n",
-       "    'ExpectedLeaveTime': '7:43pm 2021-01-05',\n",
-       "    'ExpectedCountdown': 21,\n",
+       "    'LastUpdate': '07:08:03 am'},\n",
+       "   {'Pattern': 'E1',\n",
+       "    'Destination': \"COMM'L-BDWAY STN\",\n",
+       "    'ExpectedLeaveTime': '7:07am',\n",
+       "    'ExpectedCountdown': 19,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '08:08:02 pm'}]}]"
+       "    'LastUpdate': '07:08:03 am'},\n",
+       "   {'Pattern': 'E1',\n",
+       "    'Destination': \"COMM'L-BDWAY STN\",\n",
+       "    'ExpectedLeaveTime': '7:11am',\n",
+       "    'ExpectedCountdown': 23,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '08:08:13 am'}]}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,14 +405,243 @@
     "import requests\n",
     "\n",
     "# Get your own API token from developer.translink.ca\n",
-    "apikey = 'cYLpZHtgW36bD647D1kq'; # This is bad practice but good for you to visualize. In the Walkthrough, you will learn how to hide your API keys.\n",
+    "\n",
+    "apikey = ''; # This is bad practice but good for you to visualize. \n",
+    "#In the Walkthrough, you will learn how to hide your API keys using Environmental Variables.\n",
     "\n",
     "requests.get('http://api.translink.ca/rttiapi/v1/stops/61935/estimates?apikey={}'.format(apikey),headers={'accept': 'application/JSON'}).json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/json": [
+       {
+        "AtStreet": "98 AVE",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 308,
+        "Latitude": 49.1796,
+        "Longitude": -122.84581,
+        "Name": "SB KING GEORGE BLVD FS 98 AVE",
+        "OnStreet": "KING GEORGE BLVD",
+        "Routes": "314, 321, 329",
+        "StopNo": 54997,
+        "WheelchairAccess": 1
+       },
+       {
+        "AtStreet": "134 ST",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 339,
+        "Latitude": 49.17699,
+        "Longitude": -122.8507,
+        "Name": "EB 96 AVE FS 134 ST",
+        "OnStreet": "96 AVE",
+        "Routes": "314, 329",
+        "StopNo": 54986,
+        "WheelchairAccess": 0
+       },
+       {
+        "AtStreet": "134 ST",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 343,
+        "Latitude": 49.17715,
+        "Longitude": -122.85179,
+        "Name": "WB 96 AVE FS 134 ST",
+        "OnStreet": "96 AVE",
+        "Routes": "314, 329",
+        "StopNo": 54999,
+        "WheelchairAccess": 0
+       },
+       {
+        "AtStreet": "FRASER HWY",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 367,
+        "Latitude": 49.181116,
+        "Longitude": -122.845247,
+        "Name": "NB KING GEORGE BLVD FS FRASER HWY",
+        "OnStreet": "KING GEORGE BLVD",
+        "Routes": "",
+        "StopNo": 54989,
+        "WheelchairAccess": 1
+       },
+       {
+        "AtStreet": "KING GEORGE BLVD",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 387,
+        "Latitude": 49.17713,
+        "Longitude": -122.847,
+        "Name": "WB 96 AVE FS KING GEORGE BLVD",
+        "OnStreet": "96 AVE",
+        "Routes": "314, 329",
+        "StopNo": 54998,
+        "WheelchairAccess": 1
+       },
+       {
+        "AtStreet": "96 AVE",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 425,
+        "Latitude": 49.17762,
+        "Longitude": -122.84542,
+        "Name": "NB KING GEORGE BLVD FS 96 AVE",
+        "OnStreet": "KING GEORGE BLVD",
+        "Routes": "314, 321, 326, 329, 394, R1",
+        "StopNo": 54988,
+        "WheelchairAccess": 1
+       },
+       {
+        "AtStreet": "BAY 4",
+        "BayNo": "4",
+        "City": "SURREY",
+        "Distance": 460,
+        "Latitude": 49.18268,
+        "Longitude": -122.84518,
+        "Name": "KING GEORGE STN BAY 4",
+        "OnStreet": "KING GEORGE STN",
+        "Routes": "314, 321, 326, 329, 395, 502, 503, R1",
+        "StopNo": 59339,
+        "WheelchairAccess": 1
+       },
+       {
+        "AtStreet": "BAY 1",
+        "BayNo": "1",
+        "City": "SURREY",
+        "Distance": 474,
+        "Latitude": 49.1832,
+        "Longitude": -122.8457,
+        "Name": "KING GEORGE STN BAY 1     ",
+        "OnStreet": "KING GEORGE STN",
+        "Routes": "314, 321, 326, 329, R1",
+        "StopNo": 54996,
+        "WheelchairAccess": 1
+       },
+       {
+        "AtStreet": "PLATFORM 2",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 490,
+        "Latitude": 49.18275,
+        "Longitude": -122.84474,
+        "Name": "KING GEORGE STATION PLATFORM 2",
+        "OnStreet": "KING GEORGE STATION",
+        "Routes": "992",
+        "StopNo": 57983,
+        "WheelchairAccess": 0
+       },
+       {
+        "AtStreet": "98 AVE",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 491,
+        "Latitude": 49.18107,
+        "Longitude": -122.85655,
+        "Name": "NB 132 ST NS 98 AVE",
+        "OnStreet": "132 ST",
+        "Routes": "324",
+        "StopNo": 55665,
+        "WheelchairAccess": 1
+       },
+       {
+        "AtStreet": "98 AVE",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 496,
+        "Latitude": 49.1804,
+        "Longitude": -122.8568,
+        "Name": "SB 132 ST FS 98 AVE",
+        "OnStreet": "132 ST",
+        "Routes": "324",
+        "StopNo": 55669,
+        "WheelchairAccess": 0
+       },
+       {
+        "AtStreet": "BAY 2",
+        "BayNo": "2",
+        "City": "SURREY",
+        "Distance": 496,
+        "Latitude": 49.18312,
+        "Longitude": -122.84513,
+        "Name": "KING GEORGE STN BAY 2",
+        "OnStreet": "KING GEORGE STN",
+        "Routes": "345, 394",
+        "StopNo": 54990,
+        "WheelchairAccess": 1
+       },
+       {
+        "AtStreet": "PLATFORM 1",
+        "BayNo": "N",
+        "City": "SURREY",
+        "Distance": 497,
+        "Latitude": 49.18281,
+        "Longitude": -122.84469,
+        "Name": "KING GEORGE STATION PLATFORM 1",
+        "OnStreet": "KING GEORGE STATION",
+        "Routes": "992",
+        "StopNo": 57984,
+        "WheelchairAccess": 0
+       }
+      ],
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import JSON\n",
+    "request_url = 'https://api.translink.ca/rttiapi/v1/stops?apikey={}&lat={}&long={}'.format(apikey, 49.18, -122.85)\n",
+    "response = requests.get(request_url, headers={'accept': 'application/JSON'}).json()\n",
+    "JSON(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SB KING GEORGE BLVD FS 98 AVE'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response[0]['Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -452,10 +682,10 @@
        " 'followers': 0,\n",
        " 'following': 1,\n",
        " 'created_at': '2018-08-22T01:19:27Z',\n",
-       " 'updated_at': '2021-01-04T04:21:39Z'}"
+       " 'updated_at': '2021-01-06T03:33:52Z'}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,62 +696,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Demo in Postman."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Demo in Terminal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "### The Anatomy Of A Request\n",
+    "Demo in Terminal uCURL\n",
     "\n",
-    "It’s important to know that a request is made up of four things:\n",
+    "```\n",
+    "curl https://api.github.com/users/sedv8808\n",
+    "```\n",
     "\n",
-    "1. The endpoint\n",
+    "Viewing in Chrome\n",
     "\n",
-    "2. The method\n",
-    "\n",
-    "3. The headers\n",
-    "\n",
-    "4. The data (or body)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "1. The endpoint (or route) is the url you request for\n",
-    "\n",
-    "root-endpoint/?\n",
-    "\n",
-    "https://api.github.com\n",
-    "\n",
-    "2. The Method is the type of request you send to the server. You can choose from these types below:\n",
-    "\n",
-    "a. GET - Used to get resource from server\n",
-    "\n",
-    "b. POST - Used to create new resource on server\n",
-    "\n",
-    "c. PUT/PATCH - update resource on server\n",
-    "\n",
-    "d. DELETE - delete a resource on the server"
+    "```\n",
+    "https://api.github.com/users/sedv8808\n",
+    "```"
    ]
   },
   {
@@ -572,22 +774,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "<Response [404]>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "requests.get('https://api.github.com/users/sedv8808')"
+    "requests.get('https://api.github.com/users/sedv8809')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### The Anatomy Of A Request\n",
+    "\n",
+    "It’s important to know that a request is made up of four things:\n",
+    "\n",
+    "1. The endpoint\n",
+    "\n",
+    "2. The method\n",
+    "\n",
+    "3. The headers\n",
+    "\n",
+    "4. The data (or body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "1. The endpoint (or route) is the url you request for\n",
+    "\n",
+    "root-endpoint/?\n",
+    "\n",
+    "https://api.github.com\n",
+    "\n",
+    "2. The Method is the type of request you send to the server. You can choose from these types below:\n",
+    "\n",
+    "a. GET - Used to get resource from server\n",
+    "\n",
+    "b. POST - Used to create new resource on server\n",
+    "\n",
+    "c. PUT/PATCH - update resource on server\n",
+    "\n",
+    "d. DELETE - delete a resource on the server"
    ]
   },
   {
