--- a/W01D4/imagedownload.ipynb
+++ b/W01D4/imagedownload.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "root_endpoint = 'https://api.unsplash.com/'\n",
     "client_id = 'dZAXqQ7AEOsa9Y0Gw4hYRiBc-Kb1qVzNs7wHHhiPF9c'\n",
     "\n",
-    "# Convenience function for making API calls and grabbing results\n",
+    "# Wrapper function for making API calls and grabbing results\n",
     "def search_photos(search_term):\n",
     "    api_method = 'search/photos'\n",
     "    endpoint = root_endpoint + api_method\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
