--- a/W02D3/W02D3_Other_Data_Types.ipynb
+++ b/W02D3/W02D3_Other_Data_Types.ipynb
@@ -170,7 +170,7 @@
    "source": [
     "Data set 3 is much easier to work with than the others. \n",
     "\n",
-    "To work with the other data sets you need to take extra steps, makking your code harder to write, and concepts harder to understand.  \n",
+    "To work with the other data sets you need to take extra steps, making your code harder to write, and concepts harder to understand.  \n",
     "\n",
     "The energy you need to manage a poor layout will increase with the size of your data. \n",
     "\n",
@@ -1431,7 +1431,7 @@
     "## Let's see a HTML example\n",
     "\n",
     "Let's take a look at an example: https://en.wikipedia.org/wiki/List_of_FIFA_World_Cup_winners\n",
-    "- Use inspect page to see HTML\n",
+    "- Use inspect page to see HTML, F12 for Windows Users\n",
     "- Explain header, body, tags etc."
    ]
   },
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1948,13 +1948,14 @@
        "4       5        Malbec  Argentina    13.83  3.28    Red  Fruity"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wine_2 = pd.read_excel('data/wine_2.xlsx', sheet_name=1) # here, I reference the sheet name\n",
+    "import pandas as pd\n",
+    "wine_2 = pd.read_excel('data/wine_2.xlsx', sheet_name='DATA') # here, I reference the sheet name\n",
     "wine_2"
    ]
   },
@@ -2212,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2225,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2235,10 +2236,10 @@
     {
      "data": {
       "text/plain": [
-       "<xml.etree.ElementTree.ElementTree at 0x7f81bb6f6990>"
+       "<xml.etree.ElementTree.ElementTree at 0x7fdf251e4ed0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2251,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2261,10 +2262,10 @@
     {
      "data": {
       "text/plain": [
-       "<Element 'data' at 0x7f81bb6f4890>"
+       "<Element 'data' at 0x7fdf26891d50>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2288,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2343,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2354,14 +2355,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Liechtenstein'}\n",
-      "rank : 1\n"
+      "{'name': 'Panama'}\n",
+      "gdppc : 13600\n"
      ]
     }
    ],
    "source": [
-    "country1 = root[0]\n",
-    "rank = country1[0]\n",
+    "country1 = root[2]\n",
+    "rank = country1[2]\n",
     "\n",
     "print(country1.attrib)\n",
     "print(rank.tag, \":\", rank.text)"
