--- a/W04D4/W04D04_Optimization.ipynb
+++ b/W04D4/W04D04_Optimization.ipynb
@@ -200,7 +200,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![img](img/0_gd.png)"
    ]
@@ -308,7 +312,7 @@
     "*Ingredients for GD*\n",
     "\n",
     "**Ingredient 1: functions of multiple variables**\n",
-    "    * We can write such a function as $f(x,y,z)$ (for 3 inputs) or $f(x)$ if $x$ is a vector.\n",
+    "* We can write such a function as $f(x,y,z)$ (for 3 inputs) or $f(x)$ if $x$ is a vector.\n",
     "    * Example: $f(x,y,z) = x^2 + y^2 + e^z + x^z + xyz$."
    ]
   },
@@ -528,7 +532,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -615,7 +618,7 @@
     "\n",
     "For **SGD**, each iteration involves a subset of the data.\n",
     "What fraction of the data, you might ask?\n",
-    "> batch_size/n."
+    "> $$\\frac{\\text{batchsize}}{\\text{n}}$$"
    ]
   },
   {
@@ -631,7 +634,7 @@
     "Thus, we'd need to do $100$ iterations to get to an epoch.\n",
     "\n",
     "**In general:**\n",
-    "> iterations per epoch = n/batchsize.\n",
+    "> $$\\text{iterations per epoch} = \\frac{\\text{n}}{\\text{batchsize}}$$\n",
     "\n",
     "* This gives us a formula:\n",
     "> $$\\frac{\\text{number of iterations}}{\\text{number of epochs}}=\\frac{n}{\\text{batch size}}$$"
@@ -692,17 +695,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "![img](img/5_example.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "skip"
     }
    },
@@ -741,14 +733,14 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
     "But complex models will overfit and too simple models will underfit. So, what do we do?\n",
     "\n",
-    "**Option 1:** use a less powerful model\n",
-    "**Option 2:** reduce the number of parameters\n",
+    "**Option 1:** use a less powerful model  \n",
+    "**Option 2:** reduce the number of parameters  \n",
     "For linear regression, corresponds to reducing the number of features (dimensionality reduction or feature selection)\n",
     "\n",
     "**Option 3:**  \n",
@@ -810,14 +802,7 @@
    "source": [
     "In L2 Regression, the cost function is altered by adding a penalty equivalent to square of the magnitude of the coefficients.\n",
     "\n",
-    " > $\\sum_{i=1}^M(\\mathbf{y_i} - \\hat{\\mathbf{y}})^2$ = $\\sum_{i=1}^M(\\mathbf{y_i} - \\sum_{j=0}^p{\\mathbf{w_j}} * {\\mathbf{x_{ij}}})^2 + \\lambda\\sum_{j=0}^p{\\mathbf{w_j}}^2$ \n",
-    "\n",
-    "This is equivalent to saying minimizing the cost function under the below condition:\n",
-    "\n",
-    " > $\\sum_{i=1}^M(\\mathbf{y_i} - \\hat{\\mathbf{y}})^2$ = $\\sum_{i=1}^M(\\mathbf{y_i} - \\sum_{j=0}^p{\\mathbf{w_j}} * {\\mathbf{x_{ij}}})^2$\n",
-    " \n",
-    " for some $c > 0$ & $\\sum_{j=0}^p{\\mathbf{w_j}}^2 < c $\n",
-    " \n"
+    " > $\\sum_{i=1}^M(\\mathbf{y_i} - \\hat{\\mathbf{y}})^2$ = $\\sum_{i=1}^M(\\mathbf{y_i} - \\sum_{j=0}^p{\\mathbf{w_j}} * {\\mathbf{x_{ij}}})^2 + \\lambda\\sum_{j=0}^p{\\mathbf{w_j}}^2$ \n"
    ]
   },
   {
@@ -875,8 +860,7 @@
     "The cost function for Lasso (least absolute shrinkage and selection operator) regression can be written as:\n",
     "\n",
     " > $\\sum_{i=1}^M(\\mathbf{y_i} - \\hat{\\mathbf{y}})^2$ = $\\sum_{i=1}^M(\\mathbf{y_i} - \\sum_{j=0}^p{\\mathbf{w_j}} * {\\mathbf{x_{ij}}})^2 + \\lambda\\sum_{j=0}^p\\mid{\\mathbf{w_j}}\\mid$ \n",
-    "\n",
-    "for some $c > 0$ & $\\sum_{j=0}^p{\\mathbf{w_j}}^2 < c $"
+    "\n"
    ]
   },
   {
@@ -921,7 +905,9 @@
     "- If $\\lambda$ is too small, we can overfit (model too complex).\n",
     "- If $\\lambda$ is too large, we can underfit (model ignores prediction error).\n",
     "\n",
-    "Like all other hyperparameters, the simplest way to pick it is to try a lot of values and see which works best."
+    "Like all other hyperparameters, the simplest way to pick it is to try a lot of values and see which works best.\n",
+    "\n",
+    "Look for: Cross Validation and Search Grid\n"
    ]
   },
   {
@@ -936,15 +922,6 @@
     "\n",
     "L1 and L2 regularization methods were also combined in what is called **Elastic Net Regularization** with L1 and L2 regularizations being special cases. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": []
   }
  ],
  "metadata": {
