--- a/W08D2/W08D2_DL_and_NN.ipynb
+++ b/W08D2/W08D2_DL_and_NN.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "## Lighthouse Labs - Synaptive Medical\n",
     "\n",
-    "### W7D7 Deep Learning and Convolutional Neural Networks (CNNs)\n",
+    "### W08D2 Deep Learning and Convolutional Neural Networks (CNNs)\n",
     "\n",
     "Instructor: Socorro Dominguez  \n",
     "February 23, 2021"
@@ -48,7 +48,7 @@
     }
    },
    "source": [
-    "## What is a CNN?"
+    "**Review: What is a Neural Network?**"
    ]
   },
   {
@@ -59,8 +59,17 @@
     }
    },
    "source": [
+    "We define the function recursively:\n",
     "\n",
-    "![img](img/CNNnews.png)"
+    "$$ x^{(l+1)} = h\\left( W^{(l)} x^{(l)} + b^{(l)}\\right) $$\n",
+    "\n",
+    "where $W^{(l)}$ is a matrix of parameters, $b^{(l)}$ is a vector of parameters. \n",
+    "\n",
+    "So what is $x^{(l)}$?\n",
+    " * $x^{(0)}$ are the inputs\n",
+    " * $x^{(L)}$ are the outputs, so we can say $\\hat{y}=x^{(L)}$\n",
+    " * we refer to $L-1$ as the _number of hidden layers_\n",
+    " * $h$ activation function"
    ]
   },
   {
@@ -71,9 +80,51 @@
     }
    },
    "source": [
-    ".... not that CNN....\n",
-    "\n",
-    "This CNN:"
+    "**Deep Learning** is a subfield of *machine learning* concerned with algorithms inspired by the structure and function of the brain called artificial neural networks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "![img](img/neural_nets.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Why Deep Learning?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "![img](img/unstructured_data.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## What is a CNN?"
    ]
   },
   {
@@ -128,7 +179,7 @@
     "2. CNNs learn the features of the image through filters. \n",
     "3. They identify important objects present in the image, allowing them to learn to discern one image from the other.\n",
     "\n",
-    "In our walkthrough, the CNN will learn specific features of cats that differentiate them from the dogs. \n",
+    "In one walkthrough, the CNN will learn specific features of cats that differentiate them from the dogs. \n",
     "Then, when it is provided input of cats and dogs, it can differentiate between the two. \n",
     "\n",
     "! During cold-start, the filters \"require\" hand engineering but with progress in training, they are able to adapt to the learned features and develop filters of their own. CNNs are continuously evolving."
@@ -155,7 +206,7 @@
    "source": [
     "* CNNs output is usually probabilities of being something. \n",
     "\n",
-    "* A CNN is a special tries to reduce the number of parameters in a deep neural network with many units without losing too much in the quality of the model. \n",
+    "* A CNN is special as it tries to reduce the number of parameters in a deep neural network with many units without losing too much in the quality of the model. \n",
     "\n",
     "* In images, pixels that are close to one another usually have the same type of information: sky, water, leaves, etc. \n",
     "\n",
@@ -474,6 +525,7 @@
    "source": [
     "Hyperparameters:\n",
     "* **Stride** Choose how big you want the step to be for the pooling, conv layers\n",
+    "* **Size of Kernel** How big you want your filter to be\n",
     "* **Padding** Add zeros around the image"
    ]
   },
@@ -503,7 +555,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "Check out this video to understand more: https://www.youtube.com/watch?v=FmpDIaiMIeA&feature=emb_title"
    ]
@@ -560,7 +616,17 @@
     "* In feed-forward neural networks, all connections flow forward (no loops).\n",
     "* Each layer of hidden units is fully connected to the next.\n",
     "* We need to pass fixed sized vector representation of text (CountVectorizer object) as input.\n",
-    "* We lose the temporal aspect of text in this representation.\n",
+    "* We lose the temporal aspect of text in this representation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "\n",
     "![img](https://learnopencv.com/wp-content/uploads/2017/10/mlp-diagram.jpg)"
    ]
@@ -600,20 +666,13 @@
     "\n",
     "In the beginning, NLP used a lot of Markov Chains. If you are really interested in learning NLP, you should study Markov Chains.\n",
     "\n",
-    "Markov model: $P(w_t|w_1,w_2,\\dots,w_{t-1}) = P(w_t|w_{t-1})$\n",
-    "\n",
-    "Markov model with more context: $P(w_t|w_1,w_2,\\dots,w_{t-1}) = P(w_t|w_{t-2}, w_{t-1})$\n",
+    "Markov model: $P(w_t|w_1,w_2,\\dots,w_{t-1}) = P(w_t|w_{t-2}, w_{t-1})$\n",
     "\n",
     "\n",
     "**Markov Models Downsides:**\n",
     "* They are 'memoryless'. They do not have memory beyond the previous maximum $n$ steps and when $n$ becomes larger, there is sparsity problem.\n",
     "\n",
-    "* They have huge RAM requirements because you have to store all ngrams.\n",
-    "\n",
-    "* A Markov model with $n=5$ would probably not be able to predict the next correct words in the following cases.\n",
-    "    * I am studying DS at Lighthouse because I want to work as a Data Scientist.\n",
-    "    * I am studying law at UBC because I want to work as a lawyer.\n",
-    "    * I am studying Actuarial Science at Waterloo because I want to work as an Actuary."
+    "* They have huge RAM requirements because you have to store all ngrams."
    ]
   },
   {
@@ -678,43 +737,6 @@
     }
    },
    "source": [
-    "## RNN as a graphical model\n",
-    "\n",
-    "- Each state is a function of the previous state and the input.\n",
-    "- A state contains information about the whole past sequence. \n",
-    "    - $s_t = g_t(x_t, x_{t-1}, \\dots, x_2, x_1)$ \n",
-    "\n",
-    "<img src=\"img/RNN_dynamic_model.png\" height=\"800\" width=\"800\"> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Parameter sharing\n",
-    "\n",
-    "- Parameters\n",
-    "    - Input to hidden weight matrix: $U$\n",
-    "    - Hidden to output weight matrix: $V$    \n",
-    "    - Hidden to hidden weight matrix: $W$\n",
-    "    \n",
-    "- **We share all weights between time steps**    \n",
-    "\n",
-    "<img src=\"img/RNN_dynamic_model.png\" height=\"800\" width=\"800\"> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "### What can we do with RNNs?\n",
     "\n",
     "- Simple or Vanilla RNN\n",
@@ -751,7 +773,10 @@
     "Many to many (sequence to sequence or encoder-decoder models)\n",
     "\n",
     "- Speech recognition \n",
-    "- Machine translation"
+    "- Machine translation\n",
+    "\n",
+    "\n",
+    "Check Transformers and BERT (NLP Uses)"
    ]
   },
   {
